--- a/index.html
+++ b/index.html
@@ -9,11 +9,9 @@
     <!-- Icons -->
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
 
-    <!-- Fonts -->
+    <!-- Fonts Files-->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Yeseva+One&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
     <!-- Local Styles -->
     <link rel="stylesheet" href="styles/styles.css" />
@@ -26,7 +24,7 @@
             </span>
     </nav>
     <header>
-        
+
     </header>
     <div>
 
