--- a/index.html
+++ b/index.html
@@ -1,40 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Louisiana Dance Halls</title>
 
     <!-- Icons -->
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+    <link
+      rel="stylesheet"
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,0,0"
+    />
 
     <!-- Fonts Files-->
-    <link rel="preconnect" href="https://fonts.googleapis.com">
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
 
     <!-- Local Styles -->
     <link rel="stylesheet" href="styles/styles.css" />
-    
-</head>
-<body>
-    <nav>
-        <span class="material-symbols-rounded">
-            menu
-            </span>
-    </nav>
+  </head>
+  <body>
     <header>
-
+      <div class="logo"></div>
+      <span class="material-symbols-rounded bars nav-toggle">
+        menu
+      </span>
+      <nav id="desktop-nav">
+        <ul>
+          <li><a href="#">Hamilton</a></li>
+          <li><a href="#">Holiday</a></li>
+        </ul>
+      </nav>
+      <nav class="sidenav">
+        <span class="material-symbols-rounded close nav-toggle"> close </span>
+        <ul>
+          <li><a href="#">Hamilton</a></li>
+          <li><a href="#">Holiday</a></li>
+        </ul>
+      </nav>
     </header>
-    <div>
-
-    </div>
-    <main>
-
-    </main>
-    <footer>
-
-    </footer>
-
-</body>
+    <div></div>
+    <main></main>
+    <footer></footer>
+    <script src="main.js"></script>
+  </body>
 </html>
