--- a/index.html
+++ b/index.html
@@ -22,9 +22,7 @@
   <body>
     <header>
       <div class="logo"></div>
-      <span class="material-symbols-rounded bars nav-toggle">
-        menu
-      </span>
+      <span class="material-symbols-rounded bars nav-toggle"> menu </span>
       <nav id="desktop-nav">
         <ul>
           <li><a href="#">Hamilton</a></li>
@@ -39,7 +37,19 @@
         </ul>
       </nav>
     </header>
-    <div></div>
+    <div class="hero">
+      <div class="desktop-hero">
+        <h1>Jazz Halls of Louisiana</h1>
+        <img
+        src="images/music-hall-thumbnails-800px.png"
+        alt="jazz"
+      />
+      </div>
+      <div class="mobile-hero">
+        <img src="images/jazz-thumbnail2-1500px.png" alt="jazz" />
+        <h1>Jazz Halls of Louisiana</h1>
+      </div>
+    </div>
     <main></main>
     <footer></footer>
     <script src="main.js"></script>
