--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       </nav>
       <nav class="sidenav">
         <span class="material-symbols-rounded close nav-toggle"> close </span>
-        <ul>
+        <ul class="navList">
           <li><a href="#">Hamilton</a></li>
           <li><a href="#">Holiday</a></li>
         </ul>
@@ -39,11 +39,13 @@
     </header>
     <div class="hero">
       <div class="desktop-hero">
-        <h1>Jazz Halls of Louisiana</h1>
+        <div class="hero-wrapper">
+          <h1>Jazz Halls of Louisiana</h1>
         <img
         src="images/music-hall-thumbnails-800px.png"
         alt="jazz"
       />
+        </div>
       </div>
       <div class="mobile-hero">
         <img src="images/jazz-thumbnail2-1500px.png" alt="jazz" />
