Home Page Style Complete

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Fonts Files-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
 
     <!-- Local Styles -->
     <link rel="stylesheet" href="styles/styles.css" />
@@ -52,7 +53,35 @@
         <h1>Jazz Halls of Louisiana</h1>
       </div>
     </div>
-    <main></main>
+    <main class="home-page">
+      <div class="home-tile">
+        <div class="tile-wrapper">
+          <h2 class="mobile-h2">Holiday Lounge</h2>
+          <img src="http://fakeimg.pl/300/?text=filler" alt="filler">
+          <div class="paragraph"> 
+            <h2 class="desktop-h2">Holiday Lounge</h2>
+            <p>The golden era of the Holiday Lounge has lived on in the songs of a few who have played here. Now the hall will be immortalized in VR for you to experience. Check it out!</p>
+            <button>
+              See more!
+            </button>
+          </div>
+        </div>
+      </div>
+      <div class="home-tile">
+        <div class="tile-wrapper">
+          <h2 class="mobile-h2">Hamilton's Place</h2>
+          <img class="mobile-home-img" src="http://fakeimg.pl/300/?text=filler" alt="filler">
+          <div class="paragraph"> 
+            <h2 class="desktop-h2">Hamilton's Place</h2>
+            <p>Hamilton’s Place has best been remembered in the distant memories of the musicians and crowds that gathered here. For the first time, it has been preserved digitally for all to see in an amazing VR experience!</p>
+            <button>
+              See more!
+            </button>
+          </div>
+          <img class="desktop-home-img" src="http://fakeimg.pl/300/?text=filler" alt="filler">
+        </div>
+      </div>
+    </main>
     <footer></footer>
     <script src="main.js"></script>
   </body>
