--- a/hall-pages/hamilton.html
+++ b/hall-pages/hamilton.html
@@ -5,8 +5,37 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Hamilton's Place</title>
+    <!-- Icons -->
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,0,0"
+  />
+  <!-- Fonts Files-->
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <!-- Local Styles -->
+  <link rel="stylesheet" href="../styles/styles.css" />
 </head>
 <body>
-    
+    <header>
+        <div class="logo"></div>
+        <span class="material-symbols-rounded bars nav-toggle"> menu </span>
+        <nav id="desktop-nav">
+          <ul>
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="#">Hamilton</a></li>
+            <li><a href="holiday.html">Holiday</a></li>
+          </ul>
+        </nav>
+        <nav class="sidenav">
+          <span class="material-symbols-rounded close nav-toggle"> close </span>
+          <ul class="navList">
+            <li><a href="../index.html">Home</a></li>
+            <li><a href="#">Hamilton</a></li>
+            <li><a href="holiday.html">Holiday</a></li>
+          </ul>
+        </nav>
+      </header>
+      <script src="../main.js"></script>
 </body>
 </html>
