--- a/index.html
+++ b/index.html
@@ -5,18 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Louisiana Dance Halls</title>
-
     <!-- Icons -->
     <link
       rel="stylesheet"
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,0,0"
     />
-
     <!-- Fonts Files-->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link href="https://fonts.googleapis.com/css2?family=Open+Sans&display=swap" rel="stylesheet">
-
     <!-- Local Styles -->
     <link rel="stylesheet" href="styles/styles.css" />
   </head>
@@ -26,15 +22,17 @@
       <span class="material-symbols-rounded bars nav-toggle"> menu </span>
       <nav id="desktop-nav">
         <ul>
-          <li><a href="#">Hamilton</a></li>
-          <li><a href="#">Holiday</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="hall-pages/hamilton.html">Hamilton</a></li>
+          <li><a href="hall-pages/holiday.html">Holiday</a></li>
         </ul>
       </nav>
       <nav class="sidenav">
         <span class="material-symbols-rounded close nav-toggle"> close </span>
         <ul class="navList">
-          <li><a href="#">Hamilton</a></li>
-          <li><a href="#">Holiday</a></li>
+          <li><a href="#">Home</a></li>
+          <li><a href="hall-pages/hamilton.html">Hamilton</a></li>
+          <li><a href="hall-pages/holiday.html">Holiday</a></li>
         </ul>
       </nav>
     </header>
@@ -42,10 +40,7 @@
       <div class="desktop-hero">
         <div class="hero-wrapper">
           <h1>Jazz Halls of Louisiana</h1>
-        <img
-        src="images/music-hall-thumbnails-800px.png"
-        alt="jazz"
-      />
+          <img src="images/music-hall-thumbnails-800px.png" alt="jazz" />
         </div>
       </div>
       <div class="mobile-hero">
@@ -57,32 +52,44 @@
       <div class="home-tile">
         <div class="tile-wrapper">
           <h2 class="mobile-h2">Holiday Lounge</h2>
-          <img src="http://fakeimg.pl/300/?text=filler" alt="filler">
-          <div class="paragraph"> 
+          <img src="http://fakeimg.pl/300/?text=filler" alt="filler" />
+          <div class="paragraph">
             <h2 class="desktop-h2">Holiday Lounge</h2>
-            <p>The golden era of the Holiday Lounge has lived on in the songs of a few who have played here. Now the hall will be immortalized in VR for you to experience. Check it out!</p>
-            <button>
-              See more!
-            </button>
+            <p>
+              The golden era of the Holiday Lounge has lived on in the songs of
+              a few who have played here. Now the hall will be immortalized in
+              VR for you to experience. Check it out!
+            </p>
+            <button>See more!</button>
           </div>
         </div>
       </div>
       <div class="home-tile">
         <div class="tile-wrapper">
           <h2 class="mobile-h2">Hamilton's Place</h2>
-          <img class="mobile-home-img" src="http://fakeimg.pl/300/?text=filler" alt="filler">
-          <div class="paragraph"> 
+          <img
+            class="mobile-home-img"
+            src="http://fakeimg.pl/300/?text=filler"
+            alt="filler"
+          />
+          <div class="paragraph">
             <h2 class="desktop-h2">Hamilton's Place</h2>
-            <p>Hamilton’s Place has best been remembered in the distant memories of the musicians and crowds that gathered here. For the first time, it has been preserved digitally for all to see in an amazing VR experience!</p>
-            <button>
-              See more!
-            </button>
+            <p>
+              Hamilton’s Place has best been remembered in the distant memories
+              of the musicians and crowds that gathered here. For the first
+              time, it has been preserved digitally for all to see in an amazing
+              VR experience!
+            </p>
+            <button>See more!</button>
           </div>
-          <img class="desktop-home-img" src="http://fakeimg.pl/300/?text=filler" alt="filler">
+          <img
+            class="desktop-home-img"
+            src="http://fakeimg.pl/300/?text=filler"
+            alt="filler"
+          />
         </div>
       </div>
     </main>
-    <footer></footer>
     <script src="main.js"></script>
   </body>
 </html>
