--- a/hall-pages/holiday.html
+++ b/hall-pages/holiday.html
@@ -5,11 +5,13 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Holiday Lounge</title>
+    <script type="module" src="../3D-objects/model-viewer.js"></script>
      <!-- Icons -->
      <link
      rel="stylesheet"
      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Rounded:opsz,wght,FILL,GRAD@40,400,0,0"
    />
+   <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet" />
    <!-- Fonts Files-->
    <link rel="preconnect" href="https://fonts.googleapis.com" />
    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -36,6 +38,32 @@
           </ul>
         </nav>
       </header>
+      <div class="Model-Hero">
+        <div class="modelViewer">
+            <model-viewer src="../3D-objects/3D-assets/test-jeep/low-poly-jeep2.glb" camera-controls autoplay auto-rotate ar ios-src="../3D-objects/3D-assets/test-jeep/low-poly-jeep2.usdz">
+              <button class="arButton" slot="ar-button">
+                <div class="arButton">
+                  <span class="material-icons">
+                    view_in_ar
+                  </span>
+                <p class="button">
+                  View in AR
+                </p>
+              </button>
+            </model-viewer>
+      </div>
+      <main class="content-wrapper">
+        <div class="content">
+            <a href="#">
+                <img src="http://fakeimg.pl/300/?text=tour-filler" alt="filler">
+            </a>
+            <p></p>
+            <img src="http://fakeimg.pl/300/?text=video-filler" alt="">
+        </div>
+      </main>
+      <footer class="gallary-wrapper">
+
+      </footer>
     <script src="../main.js"></script>
 </body>
 </html>
