reoganized HTML via iteration 2

--- a/hall-pages/holiday.html
+++ b/hall-pages/holiday.html
@@ -59,16 +59,47 @@
             </model-viewer>
       </div>
       </div>
+      <div class="explore-thumbnails">
+        <h2>Explore the Hall</h2>
+        <div class="scrollable">
+          <a href="#">
+            <figure>
+              <img src="http://fakeimg.pl/275x170" alt="">
+              <figcaption>Take the Tour</figcaption>
+            </figure>
+          </a>
+          <a href="#">
+            <figure>
+              <img src="http://fakeimg.pl/275x170" alt="">
+              <figcaption>Watch a Concert</figcaption>
+            </figure>
+          </a>
+          <a href="#">
+            <figure>
+              <img src="http://fakeimg.pl/275x170" alt="">
+              <figcaption>View Image Gallery</figcaption>
+            </figure>
+          </a>
+        </div>  
+      </div>
       <main class="content-wrapper">
         <div class="content">
-          <iframe src="https://hansenxr.netlify.app/canyon_glen_1/canyonglen1.html" title="test-tour" width="100%" height="300px">
-          </iframe>
-          
-            <p>The Holiday Lounge was built by T-Ed Manuel and opened on January 1st, 1958. Being an Entrepeneur and businessman who loved to spend his time in New Orleans, he built many clubs and places for Cajun music, but in the 1950’s, he saw a need for a new dance hall in Mamou. There were young folk that wanted to dance to some rock’n’roll but didn’t have a place to do it.</p>
-            <p>He built the Holiday as an homage to New Orleans, and it was like a slice of New Orleans in Mamou. Some called it a “mini-Vegas” with its flashing lights and timeless interior. T-Ed pulled out all the stops making the place, decorating it with tropical decals and colors, women in bathing suits, and even decorated the front with a cutout of Govenor Edwards. T-Ed described the place as the place for drunks and pretenders wanting to be someone else. </p>
-            <img src="http://fakeimg.pl/300/?text=video-filler" alt="">
-            <p>In his effort to make this a place for everybody, he added a restaurant to the place for people that wanted a quieter night and had the main part of the dance hall for the rowdy and loud crowd. The restaurant part of the Holiday has long since been closed, but the club is still being run by Eugene Manuel, T-Ed's son. T-Ed gave the keys to the place around Eugene’s 18th birthday, and Eugene has been running the place ever since. Eugene stated that everything that was in the lounge was there 60 years ago. Occasionally, he’d bring out the old Jukebox for the older crowd who wanted to feal nostalgic. He said it helped them stay longer than they planned and drink a little more.  </p>
-            <p>The outside of the Holiday was worn out by time and weather and didn’t hold the same timelessness as the interior. It’s been described as a “world within a world” and a “time outside of time,” a “breathing relic of good times gone by.”  </p>
+            <h2>In Its Day</h2>
+            <p>
+              The Holiday Lounge was built by T-Ed Manuel and opened on January 1st, 1958. Being an Entrepeneur and businessman who loved to spend his time in New Orleans, he built many clubs and places for Cajun music, but in the 1950’s, he saw a need for a new dance hall in Mamou. There were young folk that wanted to dance to some rock’n’roll but didn’t have a place to do it.  
+            </p>
+            <p>
+              He built the Holiday as an homage to New Orleans, and it was like a slice of New Orleans in Mamou. Some called it a “mini-Vegas” with its flashing lights and timeless interior. T-Ed pulled out all the stops making the place, decorating it with tropical decals and colors, women in bathing suits, and even decorated the front with a cutout of Govenor Edwards. T-Ed described the place as the place for drunks and pretenders wanting to be someone else.
+            </p>
+            <div class="carousel">
+
+            </div>
+            <p>
+              In his effort to make this a place for everybody, he added a restaurant to the place for people that wanted a quieter night and had the main part of the dance hall for the rowdy and loud crowd. The restaurant part of the Holiday has long since been closed, but the club is still being run by Eugene Manuel, T-Ed's son. T-Ed gave the keys to the place around Eugene’s 18th birthday, and Eugene has been running the place ever since. Eugene stated that everything that was in the lounge was there 60 years ago. Occasionally, he’d bring out the old Jukebox for the older crowd who wanted to feal nostalgic. He said it helped them stay longer than they planned and drink a little more.  
+            </p>
+            <p>
+              The outside of the Holiday was worn out by time and weather and didn’t hold the same timelessness as the interior. It’s been described as a “world within a world” and a “time outside of time,” a “breathing relic of good times gone by.”  
+            </p>
         </div>
       </main>
       <footer class="gallary-wrapper">
