Updates to styles

--- a/hall-pages/holiday.html
+++ b/hall-pages/holiday.html
@@ -59,6 +59,7 @@
               </button>
             </model-viewer>
       </div>
+      <h1>Holiday Lounge</h1>
     </div>
     <div class="explore-thumbnails">
         <h2>Explore the Hall</h2>
