--- a/index.html
+++ b/index.html
@@ -39,19 +39,21 @@
     <div class="hero">
       <div class="desktop-hero">
         <div class="hero-wrapper">
-          <h1>Jazz Halls of Louisiana</h1>
+          <h1>Dance Halls of Louisiana</h1>
           <img src="images/music-hall-thumbnails-800px.png" alt="jazz" />
         </div>
       </div>
       <div class="mobile-hero">
         <img src="images/jazz-thumbnail2-1500px.png" alt="jazz" />
-        <h1>Jazz Halls of Louisiana</h1>
+        <h1>Dance Halls of Louisiana</h1>
       </div>
     </div>
     <main class="home-page">
       <div class="home-tile">
         <div class="tile-wrapper">
-          <h2 class="mobile-h2">Holiday Lounge</h2>
+          <div class="mobile-h2-wrapper">
+            <h2 class="mobile-h2">Holiday Lounge</h2>
+          </div>
           <img src="http://fakeimg.pl/300/?text=filler" alt="filler" />
           <div class="paragraph">
             <h2 class="desktop-h2">Holiday Lounge</h2>
@@ -60,13 +62,15 @@
               a few who have played here. Now the hall will be immortalized in
               VR for you to experience. Check it out!
             </p>
-            <button>See more!</button>
+            <button>See more</button>
           </div>
         </div>
       </div>
       <div class="home-tile">
         <div class="tile-wrapper">
-          <h2 class="mobile-h2">Hamilton's Place</h2>
+          <div class="mobile-h2-wrapper">
+            <h2 class="mobile-h2">Hamilton Place</h2>
+          </div>
           <img
             class="mobile-home-img"
             src="http://fakeimg.pl/300/?text=filler"
@@ -80,7 +84,7 @@
               time, it has been preserved digitally for all to see in an amazing
               VR experience!
             </p>
-            <button>See more!</button>
+            <button>See more</button>
           </div>
           <img
             class="desktop-home-img"
