Changed to La Poussiere (index.html)

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <ul>
           <li><a href="#">Home</a></li>
           <li><a href="hall-pages/hamilton.html">Hamilton</a></li>
-          <li><a href="hall-pages/holiday.html">Holiday</a></li>
+          <li><a href="hall-pages/la-poussiere.html">La Poussiere</a></li>
         </ul>
       </nav>
       <nav class="sidenav">
@@ -32,7 +32,7 @@
         <ul class="navList">
           <li><a href="#">Home</a></li>
           <li><a href="hall-pages/hamilton.html">Hamilton</a></li>
-          <li><a href="hall-pages/holiday.html">Holiday</a></li>
+          <li><a href="hall-pages/la-poussiere.html">La Poussiere</a></li>
         </ul>
       </nav>
     </header>
@@ -52,15 +52,13 @@
       <div class="home-tile">
         <div class="tile-wrapper">
           <div class="mobile-h2-wrapper">
-            <h2 class="mobile-h2">Holiday Lounge</h2>
+            <h2 class="mobile-h2">La Poussiere</h2>
           </div>
           <img src="http://fakeimg.pl/300/?text=filler" alt="filler" />
           <div class="paragraph">
-            <h2 class="desktop-h2">Holiday Lounge</h2>
+            <h2 class="desktop-h2">La Poussiere</h2>
             <p>
-              The golden era of the Holiday Lounge has lived on in the songs of
-              a few who have played here. Now the hall will be immortalized in
-              VR for you to experience. Check it out!
+              La Poussiere translates to "The Dust," named for the dust that would rise from the boards of the wooden dance floor as people danced. 
             </p>
             <button>See more</button>
           </div>
