--- a/hall-pages/la-poussiere.html
+++ b/hall-pages/la-poussiere.html
@@ -34,7 +34,7 @@
         <ul>
           <li><a href="../index.html">Home</a></li>
           <li><a href="hamilton.html">Hamilton</a></li>
-          <li><a href="#">Holiday</a></li>
+          <li><a href="#">La Poussiere</a></li>
         </ul>
       </nav>
       <nav class="sidenav">
@@ -42,7 +42,7 @@
         <ul class="navList">
           <li><a href="../index.html">Home</a></li>
           <li><a href="hamilton.html">Hamilton</a></li>
-          <li><a href="#">Holiday</a></li>
+          <li><a href="#">La Poussiere</a></li>
         </ul>
       </nav>
     </header>
@@ -64,7 +64,7 @@
           </button>
         </model-viewer>
        <div class="hall-title">
-        <h1>Holiday Lounge</h1>
+        <h1>La Poussiere</h1>
        </div>
        
       </div>
