--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
   </head>
   <body>
     <header>
-      <div class="logo"></div>
+      <div class="logo">
+        <img src="images/accordian-icon-100x100.png" alt="accordian logo">
+      </div>
       <span class="material-symbols-rounded bars nav-toggle"> menu </span>
       <nav id="desktop-nav">
         <ul>
@@ -55,7 +57,7 @@
           <div class="mobile-h2-wrapper">
             <h2 class="mobile-h2">La Poussiere</h2>
           </div>
-          <img src="http://fakeimg.pl/300/?text=filler" alt="filler" />
+          <img src="images/la-poussiere-header-imge.jpg" alt="filler" />
           <div class="paragraph">
             <h2 class="desktop-h2">La Poussiere</h2>
             <p>
@@ -72,7 +74,7 @@
           </div>
           <img
             class="mobile-home-img"
-            src="http://fakeimg.pl/300/?text=filler"
+            src="images/hamiltons-header-image.jpg"
             alt="filler"
           />
           <div class="paragraph">
