added missing img

--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
           </div>
           <img
             class="desktop-home-img"
-            src="http://fakeimg.pl/300/?text=filler"
+            src="images/hamiltons-header-image.jpg"
             alt="filler"
           />
         </div>
