--- a/hall-pages/hamilton.html
+++ b/hall-pages/hamilton.html
@@ -24,7 +24,7 @@
           <ul>
             <li><a href="../index.html">Home</a></li>
             <li><a href="#">Hamilton</a></li>
-            <li><a href="holiday.html">Holiday</a></li>
+            <li><a href="la-poussiere.html">La Poussiere</a></li>
           </ul>
         </nav>
         <nav class="sidenav">
@@ -32,7 +32,7 @@
           <ul class="navList">
             <li><a href="../index.html">Home</a></li>
             <li><a href="#">Hamilton</a></li>
-            <li><a href="holiday.html">Holiday</a></li>
+            <li><a href="la-poussiere.html">La Poussiere</a></li>
           </ul>
         </nav>
       </header>
