Adding La Poussiere History

--- a/hall-pages/la-poussiere.html
+++ b/hall-pages/la-poussiere.html
@@ -97,40 +97,17 @@
       <div class="content">
         <h2>In Its Day</h2>
         <p>
-          The Holiday Lounge was built by T-Ed Manuel and opened on January 1st,
-          1958. Being an Entrepeneur and businessman who loved to spend his time
-          in New Orleans, he built many clubs and places for Cajun music, but in
-          the 1950’s, he saw a need for a new dance hall in Mamou. There were
-          young folk that wanted to dance to some rock’n’roll but didn’t have a
-          place to do it.
+          La Poussiere is a Cajun Dancehall which originally opened as a country store and bar in the 1920s. By 1955, the owners Ovey and Mary Patin made it into a dance hall. The name “La Poussiere” is French for “The Dust,” referencing the dust that would come up from underneath the floorboards of the original wooden dance hall which stuck with the dance hall from trial and tragedy. 
         </p>
         <p>
-          He built the Holiday as an homage to New Orleans, and it was like a
-          slice of New Orleans in Mamou. Some called it a “mini-Vegas” with its
-          flashing lights and timeless interior. T-Ed pulled out all the stops
-          making the place, decorating it with tropical decals and colors, women
-          in bathing suits, and even decorated the front with a cutout of
-          Govenor Edwards. T-Ed described the place as the place for drunks and
-          pretenders wanting to be someone else.
+          The current owner now is Lawrence Patin, and has been kept as a family business for about three generations. His daughter, Nicole Patin, keeps up their presence on social media. The club’s original location was moved due to construction, and rebuilt in its current location. It had hosted many different kinds of Cajun musicians, such as Walter Mouton, Jackie Caillier, Ivy Dugas, Wayne Toups, Steve Riley, and Geno Delafose. 
         </p>
         <div class="carousel"></div>
         <p>
-          In his effort to make this a place for everybody, he added a
-          restaurant to the place for people that wanted a quieter night and had
-          the main part of the dance hall for the rowdy and loud crowd. The
-          restaurant part of the Holiday has long since been closed, but the
-          club is still being run by Eugene Manuel, T-Ed's son. T-Ed gave the
-          keys to the place around Eugene’s 18th birthday, and Eugene has been
-          running the place ever since. Eugene stated that everything that was
-          in the lounge was there 60 years ago. Occasionally, he’d bring out the
-          old Jukebox for the older crowd who wanted to feal nostalgic. He said
-          it helped them stay longer than they planned and drink a little more.
+          La Poussiere had its fair share of difficulties staying open, such as their original customer base either getting to old to come and dance, or passing away, other dance halls closing around them, and a Tornado which severely damaged the roof and kitchen on January 10th, 2013. The club was kept alive by the musician and fans in the community through a benefits concern, and their own hands as they worked to rebuild their culture center of Cajun Music. The club also earned the name “La Petite Cathedrale de Musique Cajun,” French for “The Little Cathedral of Cajun Music” This place was important enough to the people that Lawrence has kept it open. 
         </p>
         <p>
-          The outside of the Holiday was worn out by time and weather and didn’t
-          hold the same timelessness as the interior. It’s been described as a
-          “world within a world” and a “time outside of time,” a “breathing
-          relic of good times gone by.”
+          The Dance Hall is currently still open today, running every Saturday evening, and Sunday afternoons. They made it clear that they wanted to keep their culture alive by focusing on giving people an authentic Cajun Dancehall experience, sharing their Cajun music, language, and heritage.
         </p>
       </div>
     </main>
