--- a/hall-pages/la-poussiere.html
+++ b/hall-pages/la-poussiere.html
@@ -25,7 +25,6 @@
 
     <!-- Local Styles -->
     <link rel="stylesheet" href="../styles/styles.css" />
-
   </head>
   <body>
     <header>
@@ -47,7 +46,14 @@
         </ul>
       </nav>
     </header>
-    <div class="Model-Hero">
+    <div class="hero">
+      <div class="image-hero">
+      </div>
+      <div class="hall-title">
+        <h1>La Poussiere</h1>
+       </div>
+    </div>
+    <!-- <div class="Model-Hero">
       <div class="modelViewer">
         <model-viewer
           src="../3D-objects/3D-assets/la-poussiere-3d-object/2023-louisiana-breaux-bridge-la-poussiere-3d-object-compressed.glb"
@@ -60,17 +66,15 @@
           <button class="arButton" slot="ar-button">
             <div class="arButton">
               <span class="material-icons"> view_in_ar </span>
-              <!-- <p class="button">View in AR</p> -->
+              <p class="button">View in AR</p>
             </div>
           </button>
         </model-viewer>
        <div class="hall-title">
         <h1>La Poussiere</h1>
        </div>
-       
       </div>
-      
-    </div>
+    </div> -->
     <div class="explore-thumbnails">
       <h2>Explore the Hall</h2>
       <div class="scrollable">
@@ -98,17 +102,41 @@
       <div class="content">
         <h2>In Its Day</h2>
         <p>
-          La Poussiere is a Cajun Dancehall which originally opened as a country store and bar in the 1920s. By 1955, the owners Ovey and Mary Patin made it into a dance hall. The name “La Poussiere” is French for “The Dust,” referencing the dust that would come up from underneath the floorboards of the original wooden dance hall which stuck with the dance hall from trial and tragedy. 
+          La Poussiere is a Cajun Dancehall which originally opened as a country
+          store and bar in the 1920s. By 1955, the owners Ovey and Mary Patin
+          made it into a dance hall. The name “La Poussiere” is French for “The
+          Dust,” referencing the dust that would come up from underneath the
+          floorboards of the original wooden dance hall which stuck with the
+          dance hall from trial and tragedy.
         </p>
         <p>
-          The current owner now is Lawrence Patin, and has been kept as a family business for about three generations. His daughter, Nicole Patin, keeps up their presence on social media. The club’s original location was moved due to construction, and rebuilt in its current location. It had hosted many different kinds of Cajun musicians, such as Walter Mouton, Jackie Caillier, Ivy Dugas, Wayne Toups, Steve Riley, and Geno Delafose. 
+          The current owner now is Lawrence Patin, and has been kept as a family
+          business for about three generations. His daughter, Nicole Patin,
+          keeps up their presence on social media. The club’s original location
+          was moved due to construction, and rebuilt in its current location. It
+          had hosted many different kinds of Cajun musicians, such as Walter
+          Mouton, Jackie Caillier, Ivy Dugas, Wayne Toups, Steve Riley, and Geno
+          Delafose.
         </p>
         <div class="carousel"></div>
         <p>
-          La Poussiere had its fair share of difficulties staying open, such as their original customer base either getting to old to come and dance, or passing away, other dance halls closing around them, and a Tornado which severely damaged the roof and kitchen on January 10th, 2013. The club was kept alive by the musician and fans in the community through a benefits concern, and their own hands as they worked to rebuild their culture center of Cajun Music. The club also earned the name “La Petite Cathedrale de Musique Cajun,” French for “The Little Cathedral of Cajun Music” This place was important enough to the people that Lawrence has kept it open. 
+          La Poussiere had its fair share of difficulties staying open, such as
+          their original customer base either getting to old to come and dance,
+          or passing away, other dance halls closing around them, and a Tornado
+          which severely damaged the roof and kitchen on January 10th, 2013. The
+          club was kept alive by the musician and fans in the community through
+          a benefits concern, and their own hands as they worked to rebuild
+          their culture center of Cajun Music. The club also earned the name “La
+          Petite Cathedrale de Musique Cajun,” French for “The Little Cathedral
+          of Cajun Music” This place was important enough to the people that
+          Lawrence has kept it open.
         </p>
         <p>
-          The Dance Hall is currently still open today, running every Saturday evening, and Sunday afternoons. They made it clear that they wanted to keep their culture alive by focusing on giving people an authentic Cajun Dancehall experience, sharing their Cajun music, language, and heritage.
+          The Dance Hall is currently still open today, running every Saturday
+          evening, and Sunday afternoons. They made it clear that they wanted to
+          keep their culture alive by focusing on giving people an authentic
+          Cajun Dancehall experience, sharing their Cajun music, language, and
+          heritage.
         </p>
       </div>
     </main>
