Styles for Landing Page Completed

--- a/index.html
+++ b/index.html
@@ -57,7 +57,9 @@
           <div class="mobile-h2-wrapper">
             <h2 class="mobile-h2">La Poussiere</h2>
           </div>
-          <img src="images/la-poussiere-header-imge.jpg" alt="filler" />
+          <div class="desktop-image-wrapper">
+            <img src="images/la-poussiere-header-imge.jpg" alt="La Poussiere Image" />
+          </div>
           <div class="paragraph">
             <h2 class="desktop-h2">La Poussiere</h2>
             <p>
@@ -81,17 +83,17 @@
             <h2 class="desktop-h2">Hamilton's Place</h2>
             <p>
               Hamilton’s Place has best been remembered in the distant memories
-              of the musicians and crowds that gathered here. For the first
-              time, it has been preserved digitally for all to see in an amazing
-              VR experience!
+              of the musicians and crowds that gathered here. That memory has been preserved here.
             </p>
             <button>See more</button>
           </div>
-          <img
+          <div class="desktop-image-wrapper">
+            <img
             class="desktop-home-img"
             src="images/hamiltons-header-image.jpg"
-            alt="filler"
+            alt="Hamiltons Place Image"
           />
+          </div>
         </div>
       </div>
     </main>
