Added Logo to Hall Pages

--- a/hall-pages/la-poussiere.html
+++ b/hall-pages/la-poussiere.html
@@ -28,7 +28,11 @@
   </head>
   <body>
     <header>
-      <div class="logo"></div>
+      <div class="logo">
+        <a href="../index.html">
+          <img src="../images/accordian-icon-100x100.png" alt="accordian logo">
+        </a>
+      </div>
       <span class="material-symbols-rounded bars nav-toggle"> menu </span>
       <nav id="desktop-nav">
         <ul>
