--- a/index.html
+++ b/index.html
@@ -20,7 +20,9 @@
   <body>
     <header>
       <div class="logo">
-        <img src="images/accordian-icon-100x100.png" alt="accordian logo">
+        <a href="index.html">
+          <img src="images/accordian-icon-100x100.png" alt="accordian logo">
+        </a>
       </div>
       <span class="material-symbols-rounded bars nav-toggle"> menu </span>
       <nav id="desktop-nav">
