--- a/index.html
+++ b/index.html
@@ -67,7 +67,9 @@
             <p>
               La Poussiere translates to "The Dust," named for the dust that would rise from the boards of the wooden dance floor as people danced. 
             </p>
-            <button>See more</button>
+            <a href="/hall-pages/la-poussiere.html">
+              <button>See more</button>
+            </a>
           </div>
         </div>
       </div>
@@ -87,7 +89,9 @@
               Hamilton’s Place has best been remembered in the distant memories
               of the musicians and crowds that gathered here. That memory has been preserved here.
             </p>
-            <button>See more</button>
+            <a href="hall-pages/hamilton.html">
+              <button>See more</button>
+            </a>
           </div>
           <div class="desktop-image-wrapper">
             <img
