Updated vr tours and video design

--- a/hall-pages/la-poussiere.html
+++ b/hall-pages/la-poussiere.html
@@ -57,32 +57,10 @@
         <h1>La Poussiere</h1>
        </div>
     </div>
-    <!-- <div class="Model-Hero">
-      <div class="modelViewer">
-        <model-viewer
-          src="../3D-objects/3D-assets/la-poussiere-3d-object/2023-louisiana-breaux-bridge-la-poussiere-3d-object-compressed.glb"
-          camera-controls
-          autoplay
-          auto-rotate
-          ar
-          ios-src="../3D-objects/3D-assets/la-poussiere-3d-object/2023-louisiana-breaux-bridge-la-poussiere-3d-object-compressed.usdz"
-        >
-          <button class="arButton" slot="ar-button">
-            <div class="arButton">
-              <span class="material-icons"> view_in_ar </span>
-              <p class="button">View in AR</p>
-            </div>
-          </button>
-        </model-viewer>
-       <div class="hall-title">
-        <h1>La Poussiere</h1>
-       </div>
-      </div>
-    </div> -->
     <div class="explore-thumbnails">
       <h2>Explore the Hall</h2>
       <div class="scrollable">
-        <a href="#">
+        <a href="../VR-tours/la-poussiere-vr-tour/index.html">
           <figure>
             <div class="img-scrim">
               <img src="../images/poussiere-take-the-tour-img.jpg" alt="La Poussiere Virtual Tour" />
@@ -90,7 +68,7 @@
             <figcaption>Virtual Tour</figcaption>
           </figure>
         </a>
-        <a href="#">
+        <a href="../Videos/la-poussiere-video.html">
           <figure>
             <div class="img-scrim">
               <img src="../images/poussiere-watch-the-video.jpg" alt="La Poussiere Virtual Concert" />
